[package]
name = "drift"
version = "20260201.0.0"
edition = "2021"
description = "Repo drift auditor - checks for stale configs, version mismatches, dead code markers, and CI/local drift"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
